[gd_scene load_steps=6 format=3 uid="uid://cvxvsj7flm3en"]

[ext_resource type="Script" uid="uid://ccwww0b6y12um" path="res://Scripts/main.gd" id="1_bo1nx"]
[ext_resource type="PackedScene" uid="uid://drjc2wiskis6p" path="res://Scenes/Level1.tscn" id="2_8gbba"]
[ext_resource type="Texture2D" uid="uid://3uen25ursun8" path="res://Resources/Background/background0.png" id="2_jjvhh"]
[ext_resource type="Texture2D" uid="uid://belb1fcyepepe" path="res://Resources/Background/FRAME.png" id="3_8gbba"]
[ext_resource type="Texture2D" uid="uid://be37xj113eghk" path="res://Resources/Background/background1.png" id="3_kry3j"]

[node name="Main" type="Node"]
script = ExtResource("1_bo1nx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="LeftSubViewport" type="SubViewport" parent="HBoxContainer/LeftViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
use_hdr_2d = true
size = Vector2i(160, 180)
render_target_update_mode = 4

[node name="BG_0" type="Sprite2D" parent="HBoxContainer/LeftViewportContainer/LeftSubViewport"]
position = Vector2(80, 90)
texture = ExtResource("2_jjvhh")

[node name="BG_1" type="Sprite2D" parent="HBoxContainer/LeftViewportContainer/LeftSubViewport"]
position = Vector2(80, 90)
texture = ExtResource("3_kry3j")

[node name="LeftCamera2D" type="Camera2D" parent="HBoxContainer/LeftViewportContainer/LeftSubViewport"]
unique_name_in_owner = true
offset = Vector2(0, -40)
limit_left = 0
limit_right = 320
limit_smoothed = true
position_smoothing_enabled = true

[node name="Level1" parent="HBoxContainer/LeftViewportContainer/LeftSubViewport" instance=ExtResource("2_8gbba")]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="HBoxContainer/LeftViewportContainer/LeftSubViewport"]

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/LeftViewportContainer/LeftSubViewport/CanvasLayer"]
position = Vector2(80, 90)
texture = ExtResource("3_8gbba")

[node name="RightViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="RightSubViewport" type="SubViewport" parent="HBoxContainer/RightViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
use_hdr_2d = true
size = Vector2i(160, 180)
render_target_update_mode = 4

[node name="BG_0" type="Sprite2D" parent="HBoxContainer/RightViewportContainer/RightSubViewport"]
position = Vector2(240, 90)
texture = ExtResource("2_jjvhh")

[node name="BG_1" type="Sprite2D" parent="HBoxContainer/RightViewportContainer/RightSubViewport"]
position = Vector2(240, 90)
texture = ExtResource("3_kry3j")

[node name="RightCamera2D" type="Camera2D" parent="HBoxContainer/RightViewportContainer/RightSubViewport"]
unique_name_in_owner = true
offset = Vector2(0, -40)
limit_left = 0
limit_right = 320
limit_smoothed = true
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="HBoxContainer/RightViewportContainer/RightSubViewport"]

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/RightViewportContainer/RightSubViewport/CanvasLayer"]
position = Vector2(80, 90)
texture = ExtResource("3_8gbba")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 160.0
offset_right = 164.0
offset_bottom = 180.0
